<resources>
    <string name="app_name">hotelVGO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campo_generico">Campo</string>

    <string-array name="adultos_array">
        <item>1 adulto</item>
        <item>2 adultos</item>
        <item>3 adultos</item>
    </string-array>

    <string-array name="ninos_array">
        <item>0 niños</item>
        <item>1 niño</item>
        <item>2 niños</item>
    </string-array>


    <string-array name="equipamiento_array">
        <item>TV</item>
        <item>Aire acondicionado</item>
        <item>Toallas</item>
        <item>Caja fuerte</item>
        <item>Wifi</item>
        <item>2 Camas</item>
        <item>Baño privado</item>
        <item>Escritorio</item>
    </string-array>


    <string-array name="servicios_array">
        <item>Desayuno incluido</item>
        <item>Recepción 24h</item>
        <item>Limpieza diaria</item>
        <item>Servicio a la habitación</item>
        <item>Lavandería</item>
        <item>Gimnasio</item>
        <item>Transporte al aeropuerto</item>
        <item>Pet Friendly</item>
        <item>Estacionamiento gratuito</item>
        <item>Acceso a piscina</item>
    </string-array>

    <!--LOGIN-->
    <string name="titulo_login">Ingrese Sesion</string>
    <string name="lista_administradores">Lista de administradores</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese su usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_passwrod">Ingrese su contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">¿No tienes cuenta?, Regístrate</string>
    <string name="lbl_olvido_credenciales">¿Olvidaste tu contraseña?</string>

    <!--REGISTRO-->
    <string name="lbl_como_te_llamas">¿Cómo te llamas?</string>
    <string name="lbl_ingrese_nombres">Ingresa tus nombres y apellidos</string>
    <string name="txt_registro_nombres">Nombres</string>
    <string name="txt_registro_apellidos">Apellidos</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_regresar">Regresar</string>
    <string name="lbl_valida_identidad">Valida tu identidad</string>
    <string name="lbl_tipo_doc_ident">Elije un tipo de documento de identidad</string>
    <string name="txt_tipo_doc_ident">Tipo de documento de identidad</string>
    <string name="lbl_ingresa_doc_ident">Ingresa tu DNI</string>
    <string name="txt_ingresa_doc_ident">DNI</string>
    <string name="lbl_ingrese_doc">Ingrese el número del documento</string>
    <string name="hint_doc_ident">Documento de identidad</string>
    <string name="hint_select_doc_ident">Seleccione un tipo de documento</string>
    <string name="lbl_ya_tengo_cuenta">Ya tengo una cuenta</string>
    <string-array name="tipo_documento_array">
        <item>Carnet de extranjería</item>
        <item>DNI</item>
        <item>Licencia de Conducir</item>
    </string-array>
    <string name="lbl_cuando_naciste">¿Cuándo naciste?</string>
    <string name="lbl_elije_fecha_nac">Elije tu fecha de nacimiento</string>
    <string name="hint_fec_nac">Fecha de nacimiento</string>
    <string name="lbl_atrib_usuario">Atributos de usuario</string>
    <string name="lbl_num_cel">Ingresa tu número de celular</string>
    <string name="lbl_email">Ingresa tu correo electrónico</string>
    <string name="hint_num_cel">Número de celular</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="lbl_donde_vives">¿Dónde vives?</string>
    <string name="lbl_selecciona_dep">Selecciona un departamento</string>
    <string name="hint_depart">Departamento</string>
    <string name="lbl_selecciona_prov">Selecciona una provincia</string>
    <string name="hint_selecciona_prov">Provincia</string>
    <string name="lbl_selecciona_dist">Selecciona un distrito</string>
    <string name="hint_selecciona_dist">Distrito</string>
    <string name="hint_direccion">Dirección</string>
    <string name="lbl_direccion">Ingresa tu dirección</string>
    <string name="lbl_sube_foto">Sube una foto tuya</string>
    <string name="txt_subir_foto">Subir foto</string>
    <string name="lbl_contra">Crea una contraseña</string>
    <string name="lbl_ingrese_contra">Ingresa una contraseña</string>
    <string name="lbl_ingrese_contra_again">Repite la contraseña</string>
    <string name="lbl_olvido_password">¿Olvidó su contraseña?</string>
    <string name="btn_enviar">Enviar</string>

    <!--CLIENTE-BÚSQUEDA-->
    <string name="lbl_buscar">Buscar</string>
    <string name="lbl_favoritos">Favoritos</string>
    <string name="txt_saludo">Hola, Roberto!</string>
    <string name="txt_encuentra_el_hotel">Encuenta el hotel ideal para ti</string>
    <string name="lbl_fecha_in_out">Fecha de entrada/salida</string>
    <string name="lbl_huespedes_hab">Huéspedes y habitaciones</string>
    <string name="btn_buscar">Buscar</string>
    <string name="lbl_busquedas_recientes">Búsquedas recientes</string>
    <string name="location">Ubicación</string>
    <string name="favorite">Favortios</string>


</resources>