<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_atrib_usuario"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_num_cel"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroCelular"
        style="@style/CustomTextInputRegister"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumeroCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_rounded_register"
            android:hint="@string/hint_num_cel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroCelular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/CustomTextInputRegister"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_rounded_register"
            android:hint="@string/hint_email"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#5C5524"
        android:text="@string/btn_siguiente"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/botonRegresar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/botonRegresar"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="6dp"
        android:backgroundTint="#312F19"
        android:text="@string/btn_regresar"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/botonSiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>